Rel. 4.5.0 2006-04-21
-------------------------------------------------------------------------
	
2006-04-21  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgraded using GDAL 1.3.2 with prime meridian fixes,
	and reporting of deprecated PCSes. 

2006-04-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed direction of Bogota meridian (west not east).

2006-04-19  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.5.0 release.

2006-03-30  Frank Warmerdam  <warmerdam@pobox.com>

	* projects.h, cs2cs.c, pj_strerrno.c, p_series.c, gen_cheb.c: Added
	_CRT_SECURE_NO_DEPRECATE declaration for VC8+, and ensure projects.h
	gets included first where needed.  Avoids loud warnings on VC8.
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1145

2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_krovak.c: Removed MessageBox() DEBUG stuff.

2006-03-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Return error -14 (latitude or longitude
	exceeds bounds) for failed geodetic to geocentric (lat out of +-90).

2006-03-10  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: updated to EPSG 6.9.

2006-02-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Treat errno=33 (EDOM) and errno=34 (ERANGE)
	as transient errors, and continue trying to transform the rest of
	the points.

2006-01-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/world: Fixed definition of <irish> as per:
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1041

2006-01-12  Frank Warmerdam  <warmerdam@pobox.com>

	* geocent.c: Make global variables static. Amoung other things
	this avoids conflicts for apps that link in geotrans.

2005-12-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: improve code with some symbolic names.

2005-11-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: Added OSGB36 transformation to list.

2005-07-06  Frank Warmerdam  <warmerdam@pobox.com>
